manifests/database/netpol-shared-pg.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: shared-pg
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: shared-pg
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
            io.kubernetes.pod.namespace: monitoring
        - matchLabels:
            app.kubernetes.io/name: argo-workflows-workflow-controller
            io.kubernetes.pod.namespace: argo
        - matchLabels:
            app.kubernetes.io/name: argo-workflows-server
            io.kubernetes.pod.namespace: argo
        - matchLabels:
            app.kubernetes.io/name: nextcloud
            io.kubernetes.pod.namespace: nextcloud
        - matchLabels:
            app: harbor
            component: core
            io.kubernetes.pod.namespace: harbor
        - matchLabels:
            app: harbor
            component: exporter
            io.kubernetes.pod.namespace: harbor
        - matchLabels:
            app: harbor
            component: jobservice
            io.kubernetes.pod.namespace: harbor
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            app.kubernetes.io/component: filer
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.r2.cloudflarestorage.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
